Compile with Java 11